--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,25 +9,32 @@
 
 .intro-container p {
   max-width: 70%;
-  font-size: 16px;
+  font-size: 1.3rem;
   text-align: center;
   margin-top: 16px;
   line-height: 2rem;
-}
-
-.itineraries-container {
-  margin: 0 100px;
 }
 
 .section-header {
   height: 40px;
   display: flex;
   align-items: center;
-  border-left: 6px solid $orange;
+  border-left: 6px solid $purple;
   padding: 24px;
   margin-bottom: 16px;
 }
 
 .section-header h2 {
   font-size: 26px;
+}
+
+.explore-iti-desc {
+  font-size: 1.3rem;
+}
+
+.itineraries-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
 }
